* cache decorators @cache.cache(), @cache_region() won't include first
  argument named 'self' or 'cls' as part of the cache key.  This allows
  reasonably safe usage for methods as well as functions.  (#55)
* file backend no longer squashes unpickling errors.   This was inconsistent
  behavior versus all the other backends.
* invalidate_corrupt flag on Session now emits a warning. (#52)

Release 1.5.4 (6/16/2010)
=========================

* Fix import error with InvalidCryptoBackendError.
* Fix for domain querying on property.
* Test cleanups
* Fix bug with warnings preventing proper running under Jython.

Release 1.5.3 (3/2/2010)
========================

* Fix Python 2.4 incompatibility with google import.

Release 1.5.2 (3/1/2010)
========================

* pkg_resources scanning for additional Beaker back-ends gracefully handles
  situations where its not present (GAE). Fixes #36.
* Avoid timing attacks on hash comparison.
* Provide abstract base for MemoryNamespaceManager that deals with
  "dictionaries".
* Added tests for invalidating cache, and fixed bug with function cache when
  no args are present.
* The SQLAlchemy backends require SQLAlchemy 0.4 or greater (0.6 recommended).
* Rudimental Python 3 support is now available.   Simply use Python 3 with
  Distribute and "python setup.py install" to run 2to3 automatically,
  or manually run 2to3 on "beaker" and "tests" to convert to a 
  Python 3 version.
* Added support for PyCrypto module to encrypted session, etc. in addition
  to the existing pycryptopp support.

Release 1.5.1 (12/17/2009)
==========================

* Fix cache namespacing.

Release 1.5 (11/23/2009)
========================

* Update memcached to default to using pylibmc when available.
* Fix bug when cache value doesn't exist causing has_key to throw
  an exception rather than return False. Fixes #24.
* Fix bug where getpid under GAE is used improperly to assume it
  should be a non-string. Fixes #22.